# Nearest_neighbor_search

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchmarks/: benchmark_vector_store.c
datasets/: query.parquet
src/: linear_store.c  linear_store.h  load_datasets.cpp  load_datasets.h  main.c  nsw_store.c  nsw_store.h  priority_queue.c  priority_queue.h  vector.c  vector.h  vector_store.c  vector_store.h
tests/: test_linear_store.c  test_load_datasets.c  test_nsw_store.c  test_priority_queue.c  test_vector.c  test_vector_store.c
